# SchoolLabs

./: CMakeLists.txt
7_but_49/: 7_but_49.cpp
Animals/: Animals.cpp
AnotherCouple/: AnotherCouple.cpp
ArmyTime/: ArmyTime.cpp
BarmaleiUpgrade/: BarmaleiUpgrade.cpp
Candies/: Candies.cpp
Check/: Check.cpp
Control/: Control.cpp
Couple/: Couple.cpp
Couple2/: Couple2.cpp
Crusade/: Crusade.cpp
CrusadeII/: CrusadeII.cpp
Delitel/: Delitel.cpp
Diapazon/: Diapazon.cpp
Different/: Different.cpp
DvaChisla/: DvaChisla.cpp
Exp/: Exp.cpp
Fib/: Fib.cpp
Gauss/: Gauss.cpp
HahEge/: HahEge.cpp
HahKek/: HahKek.cpp
Heroes_III_4ever/: Heroes_III_4ever.cpp
Iterator/: Iterator.cpp
Kekopoly/: Area.cpp  Area.h  Kekopoly.cpp  Player.cpp  Player.h
KolParKr6/: KolParKr6.cpp
KolPrKr3Diapout4/: KolPrKr3Diapout4.cpp
KolPsumKr18Diapout5/: KolPsumKr18Diapout5.cpp
KolSumkr3DiapOut5/: KolSumkr3DiapOut5.cpp
Kolprkr3diapin6/: Kolprkr3diapin6.cpp
Kolprkr3diapin6na2/: Kolprkr3diapin6na2.cpp
Kolsumkr8/: Kolsumkr8.cpp
Left/: Left.cpp
LengthSum/: LengthSum.cpp
LocalMinimum/: Main.cpp
Mammals/: Cat.cpp  Cat.h  Dog.cpp  Dog.h  Human.cpp  Human.h  MainMammal.cpp  Mammal.cpp  Mammal.h
Matrix/: Matrix.c
MaxPr/: MaxPr.cpp
MaxPrKr6Diapout5/: MaxPrKr6Diapout5.cpp
Maxsumkr3/: Maxsumkr3.cpp
Middle/: Middle.cpp
MinPrkr3Diapout4/: MinPrkr3Diapout4.cpp
MinPrkr6Diapout4/: MinPrkr6Diapout4.cpp
MinSumkr3Diapmore5/: MinSumkr3Diapmore5.cpp
Minprkr3/: Minprkr3.cpp
Minprkr3na2/: Minprkr3na2.cpp
Minprkr6/: Minprkr6.cpp
Minprkr6na2/: Minprkr6na2.cpp
Minprnekr3/: Minprnekr3.cpp
Minsumkr9/: Minsumkr9.cpp
Minsumkr9na2/: Minsumkr9na2.cpp
Mnogo/: Mnogo.cpp
NOK/: NOK.cpp
Navigate/: Navigate.cpp
Palindrom/: Palindrom.cpp
Points/: Points.cpp
Pride/: Pride.cpp
Santa/: Santa.cpp
Skobka/: Skobka.cpp
Soldiers/: Soldiers.cpp
SumEge/: SumEge.cpp
SuperMin/: SuperMin.cpp
SysSch/: SysSch.cpp
Tree/: Tree.cpp
TwoContainers/: TwoContainers.cpp
Virus/: Virus.cpp
Vitaz/: Vitaz.cpp
Windows/: Windows.cpp
YesNo/: YesNo.cpp
abc/: abc.cpp
