cmake_minimum_required(VERSION 3.10)
project(SchoolLabs)

set(CMAKE_CXX_STANDARD 17)

add_executable(SchoolLabs Matrix/Matrix.c)

add_executable(Minimum LocalMinimum/Minimum.cpp)

add_executable(Candies Candies/Candies.cpp)

add_executable(Couple Couple/Couple.cpp)

add_executable(AnotherCouple AnotherCouple/AnotherCouple.cpp)

add_executable(Points Points/Points.cpp)

add_executable(String String/String.cpp)

add_executable(Couple2 Couple2/Couple2.cpp)

add_executable(Left Left/Left.cpp)

add_executable(Navigate Navigate/Navigate.cpp)

add_executable(Soldiers Soldiers/Soldiers.cpp)

add_executable(Delitel Delitel/Delitel.cpp)

add_executable(Gauss Gauss/Gauss.cpp)

add_executable(ArmyTime ArmyTime/ArmyTime.cpp)

add_executable(Mammals Mammals/MainMammal.cpp Mammals/Mammal.h Mammals/Dog.h Mammals/Cat.h Mammals/Human.h Mammals/Mammal.cpp Mammals/Dog.cpp Mammals/Cat.cpp Mammals/Human.cpp)

add_executable(Mnogo Mnogo/Mnogo.cpp)

add_executable(Barmalei Barmalei/Barmalei.cpp)

add_executable(Windows Windows/Windows.cpp)

add_executable(BarmaleiUpgrade BarmaleiUpgrade/BarmaleiUpgrade.cpp)

add_executable(HahKek HahKek/HahKek.cpp)

add_executable(NOK NOK/NOK.cpp)

add_executable(Iterator Iterator/Iterator.cpp)

add_executable(TwoContainers TwoContainers/TwoContainers.cpp)

add_executable(Different Different/Different.cpp)

add_executable(YesNo YesNo/YesNo.cpp)

add_executable(Tree Tree/Tree.cpp)

add_executable(Santa Santa/Santa.cpp)

add_executable(Heroes_III_4ever Heroes_III_4ever/Heroes_III_4ever.cpp)

add_executable(Animals Animals/Animals.cpp)

add_executable(Virus Virus/Virus.cpp)

add_executable(Middle Middle/Middle.cpp)

add_executable(Palindrom Palindrom/Palindrom.cpp)

add_executable(SumEge SumEge/SumEge.cpp)

add_executable(SuperMin SuperMin/SuperMin.cpp)

add_executable(MaxPr MaxPr/MaxPr.cpp)

add_executable(Exp Exp/Exp.cpp)

add_executable(Crusade Crusade/Crusade.cpp)

add_executable(CrusadeII CrusadeII/CrusadeII.cpp)

add_executable(HahEge HahEge/HahEge.cpp)

add_executable(Kekopoly Kekopoly/Kekopoly.cpp Kekopoly/Player.h Kekopoly/Area.h Kekopoly/Area.cpp Kekopoly/Player.cpp)

add_executable(Control Control/Control.cpp)

add_executable(7_but_49 7_but_49/7_but_49.cpp)

add_executable(Pride Pride/Pride.cpp)

add_executable(Minprkr3 Minprkr3/Minprkr3.cpp)

add_executable(Minprkr3na2 Minprkr3na2/Minprkr3na2.cpp)

add_executable(Minprnekr3 Minprnekr3/Minprnekr3.cpp)

add_executable(Minprkr6na2 Minprkr6na2/Minprkr6na2.cpp)

add_executable(Minprkr6 Minprkr6/Minprkr6.cpp)

add_executable(Minsumkr9na2 Minsumkr9na2/Minsumkr9na2.cpp)

add_executable(Minsumkr9 Minsumkr9/Minsumkr9.cpp)

add_executable(LengthSum LengthSum/LengthSum.cpp)

add_executable(Kolsumkr8 Kolsumkr8/Kolsumkr8.cpp)

add_executable(Diapazon Diapazon/Diapazon.cpp)

add_executable(MinSumkr3Diapmore5 MinSumkr3Diapmore5/MinSumkr3Diapmore5.cpp)

add_executable(MinPrkr3Diapout4 MinPrkr3Diapout4/MinPrkr3Diapout4.cpp)

add_executable(MinPrkr6Diapout4 MinPrkr6Diapout4/MinPrkr6Diapout4.cpp)

add_executable(KolPrKr3Diapout4 KolPrKr3Diapout4/KolPrKr3Diapout4.cpp)

add_executable(Vitaz Vitaz/Vitaz.cpp)

add_executable(Fib Fib/Fib.cpp)

add_executable(DvaChisla DvaChisla/DvaChisla.cpp)

add_executable(Check Check/Check.cpp)